--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,9 @@
       width: 121px;
       font-family: Arial, sans-serif;
     }
-    
+
     h3 {
-        margin-bottom: 0px;
+      margin-bottom: 0px;
     }
 
     button {
@@ -19,16 +19,28 @@
       padding: 10px;
       margin-top: 10px;
       cursor: pointer;
+      border-radius: 5px;
+      background: linear-gradient(90deg, #4a90e2, #357abd);
+      border: none;
+      font-weight: bold;
+      color: white;
+      box-shadow: 1px 1px #053388, 2px 2px #053388, 3px 3px #053388;
+    }
+
+    button:hover {
+      box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
+      transform: translateY(-2px);
+    }
+
+    button:active {
+      box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.2);
+      transform: translateY(2px);
     }
   </style>
 </head>
 
 <body>
-  <h3><img
-    style="height: 40px; width: auto"
-    class="logoImageItem"
-    src="logo.png"
-  /></h3>
+  <h3><img style="height: 40px; width: auto" class="logoImageItem" src="images/logo.png" /></h3>
   <div class="buttonList">
     <button id="ppt">内容提炼</button>
     <button id="knowledgeTree">生成知识树</button>
