添加网页截图功能

--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
 <body>
   <h3><img style="height: 40px; width: auto" class="logoImageItem" src="images/logo.png" /></h3>
   <div class="buttonList">
-    <button id="ppt">内容提炼</button>
+    <button id="cardNotes">生成卡片笔记</button>
     <button id="knowledgeTree">生成知识树</button>
   </div>
   <script src="popup.js"></script>
