调整按钮的宽度

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <style>
     body {
-      width: 121px;
+      width: 150px;
       font-family: Arial, sans-serif;
     }
 
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <h3><img style="height: 40px; width: auto" class="logoImageItem" src="images/logo.png" /></h3>
+  <h3 class="titleItem"><img style="height: 40px; width: auto" class="logoImageItem" src="images/logo.png" /></h3>
   <div class="buttonList">
     <button id="cardNotes">生成卡片笔记</button>
     <button id="knowledgeTree">生成知识树</button>
